MSYS2 package fix: include lua-5.4.6.dll in zip

--- a/sys/windows/GNUmakefile
+++ b/sys/windows/GNUmakefile
@@ -1360,12 +1360,13 @@ $(ONH)/%.o: $(SRC)/%.c $(NHLUAH) | $(ONH)
 TARGET_CPU = x64
 NHV=370
 PKGFILES = nethackrc.template Guidebook.txt license NetHack.exe NetHack.txt \
-        NetHackW.exe opthelp nhdat370 record symbols sysconf.template
+	NetHackW.exe opthelp nhdat370 record symbols sysconf.template $(notdir $(LUADLL))
+
 FILESTOZIP = $(addprefix $(GAMEDIR)/, $(PKGFILES))
 MAINZIP = $(PkgDir)/nethack-$(NHV)-win-$(TARGET_CPU)-msys2.zip
 
 package: binary $(FILESTOZIP) $(MAINZIP)
-       @echo NetHack Windows package created: $(MAINZIP)
+	@echo NetHack Windows package created: $(MAINZIP)
 
 $(MAINZIP): $(FILESTOZIP) | $(PkgDir)
 	/c/Windows/System32/tar -a -cf $(MAINZIP) -C $(GAMEDIR) $(PKGFILES)
