more follow-up (for visual studio)

--- a/sys/windows/vs/NetHack/NetHack.vcxproj
+++ b/sys/windows/vs/NetHack/NetHack.vcxproj
@@ -297,6 +297,7 @@
     <ClInclude Include="$(WinCursDir)curswins.h" />
     <ClInclude Include="$(IncDir)sfprocs.h" />
     <ClInclude Include="$(IncDir)savefile.h" />
+    <ClInclude Include="$(IncDir)sfmacros.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(WinWin32Dir)NetHack.rc" />
