--- a/sys/vms/Makefile_src.vms
+++ b/sys/vms/Makefile_src.vms
@@ -114,10 +114,10 @@ HACK_H = $(addsuffix .h, $(addprefix $(INCL), $(CONFIGBASEH) $(HACKBASEH)))
 # all .c that are part of the main NetHack program and are not
 # operating-system or windowing-system specific.
 # Do not include date.c in this list.
-HACKFILES := allmain alloc apply artifact attrib ball bones \
-	   botl calendar cmd coloratt dbridge decl detect dig display dlb do \
-	   do_name do_wear dog dogmove dokick dothrow drawing \
-	   dungeon eat end engrave exper explode extralev \
+HACKFILES := allmain alloc apply artifact attrib ball bones botl \
+	   calendar cfgfiles cmd coloratt dbridge decl detect \
+	   dig display dlb do do_name do_wear dog dogmove dokick \
+           dothrow drawing dungeon eat end engrave exper explode extralev \
 	   files fountain getpos glyphs hack hacklib insight invent isaac64 \
 	   light lock mail makemon mcastu mdlib mhitm mhitu minion mklev \
 	   mkmap mkmaze mkobj mkroom mon \
