--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,8 @@ strategy:
       imageName: 'windows-2025'
       toolchainName: mingw
       buildTargetName: all
-    linux_noble_cross_msdos:
-      imageName: 'ubuntu-24.04'
+    linux_latest_cross_msdos:
+      imageName: 'ubuntu-latest'
       toolchainName: cross
       buildTargetName: msdos
     linux_noble_docs:
