--- a/sys/windows/vs/NetHack/NetHack.vcxproj
+++ b/sys/windows/vs/NetHack/NetHack.vcxproj
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\config.props" />
   <Import Project="..\dirs.props" />
-  <PropertyGroup Label="Globals">
-    <ProjectGuid>{609BC774-C6F8-4B2B-AA7D-5B3D0EA95751}</ProjectGuid>
-    <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NetHack</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <Import Project="..\default.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -15,6 +9,12 @@
   <Import Project="..\console.props" />
   <Import Project="..\common.props" />
   <Import Project="..\files.props" />
+	<PropertyGroup Label="Globals">
+		<ProjectGuid>{609BC774-C6F8-4B2B-AA7D-5B3D0EA95751}</ProjectGuid>
+		<Keyword>Win32Proj</Keyword>
+		<RootNamespace>NetHack</RootNamespace>
+		<WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+	</PropertyGroup>
   <PropertyGroup>
     <OutDir>$(BinDir)</OutDir>
   </PropertyGroup>
